fix: bg-light-dark into bg-surface-contrast

--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -188,7 +188,7 @@
   }
 
   .btn-connect-wallet {
-    @apply bg-light-dark hover:border-light-dark flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-primary hover:border hover:bg-transparent;
+    @apply bg-surface-contrast hover:border-light-dark flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-primary hover:border hover:bg-transparent;
   }
 
   .card-text-accordion {
